Trying to add multiple selection and creation of all the entitites