@@ -2,6 +2,7 @@ package com.tonilr.CarsEcommerce.Controllers;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -22,6 +23,6 @@ public class OrderStatusController {
         return Arrays.asList(OrderStatus.values())  // Devuelve una lista de categorías
             .stream()
             .map(Enum::name)
-            .toList();
-    }
+            .collect(Collectors.toList());
+        }
 }
